--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d1048108-7a3c-40e0-b298-88bd336e93b3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
